style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
  background-color: rgb(0, 8, 50);
}

header {
  width: 100%;
  height: 100vh;
  position: relative;
  overflow: hidden;
}

a {
  text-decoration: none;
  color: #fff;
}

.foreground {
  position: absolute;
  width: 100%;
  bottom: 0;
  right: 0;
  z-index: 8;
}

.lake {
  position: absolute;
  width: 100%;
  bottom: 0;
  right: 0;
  z-index: 7;
}

.trees1 {
  position: absolute;
  width: 100%;
  bottom: 0;
  right: 0;
  z-index: 6;
}

.trees2 {
  position: absolute;
  width: 100%;
  bottom: 0;
  right: 0;
  z-index: 5;
}

.mountains1 {
  position: absolute;
  width: 100%;
  bottom: 0;
  right: 0;
  z-index: 4;
}

.mountains2 {
  position: absolute;
  width: 100%;
  bottom: 0;
  right: 0;
  z-index: 3;
}

.clouds {
  position: absolute;
  width: 100%;
  bottom: 0;
  right: 0;
  z-index: 2;
}

.sun {
  position: absolute;
  width: 100%;
  bottom: 0;
  right: 0;
  z-index: 1;
}

.sky {
  width: 100%;
  height: 100%;
  background: rgb(0,234,255);
  background: -moz-linear-gradient(0deg, rgba(0,234,255,1) 0%, rgba(0,118,234,1) 50%, rgba(0,2,213,1) 100%);
  background: -webkit-linear-gradient(0deg, rgba(0,234,255,1) 0%, rgba(0,118,234,1) 50%, rgba(0,2,213,1) 100%);
  background: linear-gradient(0deg, rgba(0,234,255,1) 0%, rgba(0,118,234,1) 50%, rgba(0,2,213,1) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#00eaff",endColorstr="#0002d5",GradientType=1);
}

.title {
  position: absolute;
  z-index: 9;
  line-height: 3.5rem;
  top: calc(50% - 2rem);
  width: 100%;
  text-align: center;
  font-size: 2rem;
  font-weight: 600;
  color: #fff;
}

.github:hover {
  color: #808080;
}

.reddit:hover {
  color: #ff3312;
}

.email:hover {
  color: #6AE0F7
}

.scrolldown {
  position: absolute;
  z-index: 10;
  bottom: 20px;
  left: 50%;
  width: 30px;
  height: 30px;
  transform: translateY(-80px) translateX(-50%) rotate(45deg);
}

.scrolldown span {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 100%;
  height: 100%;
  border-bottom: 2px solid #fff;
  border-right: 2px solid #fff;
  animation: animate 1.5s linear infinite;
  opacity: 0;
}

.scrolldown span:nth-child(1) {
  transform: translate(-10px,-10px);
  animation-delay: -0.4s;
}

.scrolldown span:nth-child(2) {
  transform: translate(0,0);
  animation-delay: -0.2s;
}

.scrolldown span:nth-child(3) {
  transform: translate(10px,10px);
  animation-delay: 0s;
}

@keyframes animate {
  0% {
    top: -5px;
    left: -5px;
    opacity: 0;
  }
  25% {
    top: 0;
    left: 0;
    opacity: 1;
  }
  50%, 100% {
    top: 5px;
    left: 5px;
    opacity: 0;
  }
}

section {
  width: 100%;
  position: relative;
}

.container {
  padding: 3rem;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
  max-width: 70rem;
}

.content {
  color: #fff;
  transform: translateY(-50px);
}

.myProjects {
  font-weight: 600;
  font-size: 1.5rem;
  margin-bottom: 1.5rem;
  padding-bottom: 0.5rem;
  text-align: center;
}

.border{
  position: absolute;
  width: 0%;
  height: 3px;
  background-color: #fff;
  margin-left: 42%;
  margin-right: 50%;
}

.cardWrap {
  max-width: 70rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.card {
  padding: 30px;
  margin-left: 1%;
  margin-right: 1%;
  width: 300px;
  transition: 0.2s all;
  text-align: center;
  border: 1px solid #fff;
  border-radius: 10px;
}

.cardWrap:hover .card {
  filter: blur(2px);
  opacity: 0.5;
  transform: scale(0.98);
}

.cardWrap:hover .card:hover {
  filter: blur(0px);
  transform: scale(1);
  opacity: 1;
}

.moreInfo {
  margin-top: 10px;
  text-align: center;
}

.moreInfo a {
  color: rgb(123, 123, 255);
}

.moreInfo a:hover {
  color: rgb(155, 155, 255);
}

.opacity {
  opacity: 0;
}

.footer {
  margin-bottom: 20px;
  width: 100%;
  color: #fff;
  text-align: center;
}

.footer span:hover {
  color: #ff007f;
}

@media(max-width: 600px) {
    .title {
        font-size: 1.5rem;
        line-height: 2.75rem;
    }
}

@media(max-width: 880px) {
  .cardWrap {
    display: block;
  }
  .card {
    margin-top: 3%;
    margin-bottom: 3%;
  }
  .border {
    display: none;
  }
}

